--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>window.__config__ = { theme: 'dark' }</script>
   </body>
 </html>
